--- a/.github/workflows/update-weather.yml
+++ b/.github/workflows/update-weather.yml
@@ -15,8 +15,8 @@ jobs:
           city: DaNang
           days: 7
           weather-api-key: ${{ secrets.WEATHER_API_KEY }}
-          template-file: 'README.md.template'
-          out-file: 'README.md'
+          template-file: 'weathers.md.tpl'
+          out-file: 'README.md.tpl'
       - name: Commit
         run: |
           if git diff --exit-code; then
