--- a/.github/workflows/update-weather.yml
+++ b/.github/workflows/update-weather.yml
@@ -1,7 +1,7 @@
 name: "Cronjob"
 on:
   schedule:
-    - cron: '15 * * * *'
+    - cron: "15 * * * *"
 
 jobs:
   update-weather:
@@ -15,8 +15,8 @@ jobs:
           city: DaNang
           days: 7
           weather-api-key: ${{ secrets.WEATHER_API_KEY }}
-          template-file: 'README.md.tpl'
-          out-file: 'README.md'
+          template-file: "README.md.tpl"
+          out-file: "README.md"
       - name: Commit
         run: |
           if git diff --exit-code; then
