--- a/.github/workflows/update-weather.yml
+++ b/.github/workflows/update-weather.yml
@@ -15,7 +15,7 @@ jobs:
           city: DaNang
           days: 7
           weather-api-key: ${{ secrets.WEATHER_API_KEY }}
-          template-file: "README.md.tpl"
+          template-file: "weathers.md.tpl"
           out-file: "README.md"
       - name: Commit
         run: |
